--- a/memoirk_blog/static/memoirk_blog/main.css
+++ b/memoirk_blog/static/memoirk_blog/main.css
@@ -13,7 +13,7 @@ ul {
 }
 
 .bg-steel {
-    background-color: #5f788a;
+    background-color: firebrick;
 }
 
 .site-header .navbar-nav .nav-link {
