--- a/memoirk_blog/static/memoirk_blog/main.css
+++ b/memoirk_blog/static/memoirk_blog/main.css
@@ -1,11 +1,15 @@
 body {
-    background: #fafafa;
-    color: #333333;
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+    color:#7D6B7D;
     margin-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #444444;
+    color: #7D6B7D;
+}
+
+a {
+    color: #7D6B7D;
 }
 
 ul {
@@ -13,15 +17,17 @@ ul {
 }
 
 .bg-steel {
-    background-color: firebrick;
+    /* background: #FF8C64; */
+    background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898; 
+    background-blend-mode: multiply,multiply;
 }
 
 .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+    color: #ffffff;
 }
 
 .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color:#FF8C64;
 }
 
 .site-header .navbar-nav .nav-link.active {
@@ -29,7 +35,7 @@ ul {
 }
 
 .content-section {
-    background: #ffffff;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     padding: 10px 20px;
     border: 1px solid #dddddd;
     border-radius: 3px;
@@ -37,11 +43,11 @@ ul {
 }
 
 .article-title {
-    color: #444444;
+    color: #7D6B7D;
 }
 
 a.article-title:hover {
-    color: #428bca;
+    color: #FF665A;
     text-decoration: none;
 }
 
@@ -58,11 +64,11 @@ a.article-title:hover {
 .article-metadata {
     padding-bottom: 1px;
     margin-bottom: 4px;
-    border-bottom: 1px solid #e3e3e3
+    border-bottom: 1px solid #FF8C64
 }
 
 .article-metadata a:hover {
-    color: #333;
+    color: #FF665A;
     text-decoration: none;
 }
 
